maps small tweaks and allow custom str in path

--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -66,7 +66,6 @@
    "source": [
     "import src.variable_values_and_errors as val_err\n",
     "from src.errorconfig import BootstrapConfig\n",
-    "import src.variable_values_and_errors as val_err\n",
     "\n",
     "import utils.miscellaneous_functions as MF\n",
     "import utils.load_sim as load_sim\n",
@@ -76,7 +75,8 @@
     "import utils.coordinates as coordinates\n",
     "\n",
     "import plotting.map_functions as mapf\n",
-    "import plotting.plotting_helpers as PH"
+    "import plotting.plotting_helpers as PH\n",
+    "import plotting.mixed_plots as MP"
    ]
   },
   {
@@ -283,9 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_xy_max = 3\n",
-    "# _xy_bins = round(2*_xy_max * 20/6)\n",
+    "_xy_max = 3.5\n",
+    "# _xy_max = 9\n",
+    "\n",
+    "# _xy_bins = round(2*_xy_max * 23/7)\n",
     "_xy_bins = 23\n",
+    "# _xy_bins = 36\n",
     "\n",
     "_z_max = 3\n",
     "_z_bins = 11\n",
@@ -403,7 +406,7 @@
    "outputs": [],
    "source": [
     "extra_variable_min_dict = {\n",
-    "#     \"b\" : bmin,\n",
+    "    \"b\" : 3,\n",
     "    \"d\" : 5,\n",
     "    \"y\" : -_xy_max,\n",
     "    \"x\" : -_xy_max,\n",
@@ -411,7 +414,7 @@
     "    \"R\" : 0,\n",
     "}\n",
     "extra_variable_max_dict = {\n",
-    "#     \"b\" : bmax,\n",
+    "    \"b\" : 6,\n",
     "    \"d\" : 11,\n",
     "    \"y\" : _xy_max,\n",
     "    \"x\" : _xy_max,\n",
@@ -421,7 +424,7 @@
     "extra_variable_map = {\n",
     "    \"lb\" : \"R\",#\"d\",\n",
     "    \"dl\" : \"b\",#z\n",
-    "    \"xy\" : \"z\",\n",
+    "    \"xy\" : \"b\",#z\n",
     "    \"Rphi\" : \"z\",\n",
     "    \"yz\": \"x\",\n",
     "    \"xz\": \"y\"\n",
@@ -439,8 +442,8 @@
     "x_variable = \"x\" #d #l\n",
     "y_variable = \"y\"\n",
     "\n",
-    "vel_x_variable = \"x\"\n",
-    "vel_y_variable = \"y\" # Note phi should be given as \\phi\n",
+    "vel_x_variable = \"r\"\n",
+    "vel_y_variable = \"l\" # Note phi should be given as \\phi\n",
     "\n",
     "extra_variable = extra_variable_map[x_variable+y_variable]"
    ]
@@ -453,7 +456,7 @@
    "source": [
     "min_star_number = 50\n",
     "\n",
-    "bootstrapconfig = BootstrapConfig(symmetric=True,repeats=1)"
+    "bootstrapconfig = BootstrapConfig(symmetric=True,repeats=500)"
    ]
   },
   {
@@ -555,6 +558,8 @@
     "                       limit_color=\"r\"):\n",
     "    \n",
     "    vmin = np.nanmin(map_arrays)\n",
+    "    vmin = vmin if vmin != 0 else None\n",
+    "    \n",
     "    vmax = np.nanmax(map_arrays)\n",
     "    norm = LogNorm(vmin,vmax) if map_variable == \"number\" else None\n",
     "    cmap = \"coolwarm\" if map_variable in divergent_map_list else \"viridis\"\n",
@@ -687,6 +692,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "extra_path_portions = [\"only_positive_vl\"]\n",
+    "\n",
+    "# extra_path_portions = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#create path\n",
     "save_path = general_path + \"graphs/maps/\"\n",
     "MF.create_dir(save_path)\n",
@@ -720,7 +736,8 @@
     "    save_path += f\"{age_min}age{age_max}step{age_step}/\"\n",
     "    MF.create_dir(save_path)\n",
     "    \n",
-    "save_path_gridcounts = save_path\n",
+    "if len(extra_path_portions) == 0:\n",
+    "    save_path_gridcounts = save_path\n",
     "\n",
     "save_path += f\"v{vel_x_variable}v{vel_y_variable}/\" if vel_y_variable != \"\\phi\" else f\"vRvphi/\"\n",
     "MF.create_dir(save_path)\n",
@@ -731,7 +748,23 @@
     "save_path += f\"boot_repeats_{bootstrapconfig.repeats}/\"\n",
     "MF.create_dir(save_path)\n",
     "\n",
+    "for path_portion in extra_path_portions:\n",
+    "    save_path += f\"{path_portion}/\"\n",
+    "    MF.create_dir(save_path)\n",
+    "    \n",
+    "if len(extra_path_portions):\n",
+    "    save_path_gridcounts = save_path\n",
+    "\n",
     "print(\"Saving in\",save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_extra = df_extra.query(\"vl > 0\")"
    ]
   },
   {
@@ -774,7 +807,7 @@
     "            vals,_,_ = np.histogram2d(pop[x_variable],pop[y_variable],bins=[x_bins,y_bins])\n",
     "            vmin,vmax = min(vmin,np.nanmin(vals)),max(vmax,np.nanmax(vals))\n",
     "\n",
-    "        norm = LogNorm(vmin=vmin,vmax=vmax)\n",
+    "        norm = LogNorm(vmin=vmin if vmin != 0 else None,vmax=vmax)\n",
     "\n",
     "        print(\"Min star number:\",int(vmin))\n",
     "        print(\"Max star number:\",int(vmax))\n",
@@ -933,8 +966,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_bool = True\n",
-    "save_bool = False\n",
+    "save_bool = True\n",
+    "# save_bool = False\n",
     "\n",
     "if x_variable+y_variable != \"lb\": # currently looks bad for lb\n",
     "    plot_values_heatmap(\"number\", map_dict[\"number\"], save_bool=save_bool,save_path=save_path_gridcounts)"
@@ -1125,6 +1158,7 @@
     "# line plotting\n",
     "\n",
     "plotting_lines_bool = x_variable+y_variable==\"xy\"\n",
+    "# plotting_lines_bool = False\n",
     "\n",
     "plotting_line_labels = True # This only has effect in the double maps for now\n",
     "highlight_lines = False # This only has effect in the double maps for now\n",
@@ -1136,12 +1170,11 @@
     "    angle_range = [-15,-10,-5,0,5,10,15] if x_max > 2 else [-10,-5,0,5,10]\n",
     "    radii_list = np.array([5.1,6.1,7.1,8.1,9.1,10.1,11.1]) if x_max > 2 else [6,7,8,9,10]\n",
     "    \n",
-    "#     angle_label_vals = np.arange(min(angle_range),max(angle_range)+10,10)\n",
-    "    angle_label_vals = np.arange(min(angle_range),max(angle_range)+5,5)\n",
-    "    if 0 not in angle_label_vals:\n",
-    "        angle_label_vals = np.append(angle_label_vals,0)\n",
+    "    angle_label_vals = angle_range\n",
     "    \n",
-    "    radii_label_vals = [6.1,8.1,10.1]\n",
+    "    radii_label_vals = [\n",
+    "        r for r in [6.1,8.1,10.1] if r in radii_list\n",
+    "    ]\n",
     "    \n",
     "    contour_lw = 0.5\n",
     "    dashes = [20, 10] # length of on / off parts\n",
@@ -1152,6 +1185,21 @@
     "    \n",
     "    print(\"Plotting angles:\",angle_range,\"with label in\",angle_label_vals)\n",
     "    print(\"Plotting radii:\",radii_list,\"with label in\",radii_label_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "angle_range = [-2,2]\n",
+    "radii_list = [8.1]\n",
+    "\n",
+    "angle_label_vals, radii_label_vals = [],[]\n",
+    "\n",
+    "contour_lw = 1\n",
+    "dashes = [1, 0]"
    ]
   },
   {
@@ -1318,7 +1366,8 @@
     "        if vel_x_variable+vel_y_variable=='R\\phi':\n",
     "            if x_variable+y_variable=='xy':\n",
     "                if map_variable == \"mean_vy\":\n",
-    "                    return [-160,-150,-130,-110,-90,-70,-50,-30]\n",
+    "#                     return [-160,-150,-130,-110,-90,-70,-50,-30]\n",
+    "                    return [-150,-130,-110,-90,-70,-50,-30]\n",
     "                if map_variable in [\"std_vx\",\"std_vy\"]:\n",
     "                    return [40,60,70,90,100,120,130,140]\n",
     "                if map_variable == 'correlation':\n",
@@ -1549,8 +1598,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "density_contours_on = True\n",
-    "# density_contours_on = False\n",
+    "# density_contours_on = True\n",
+    "density_contours_on = False\n",
     "\n",
     "density_contour_color = 'yellow'\n",
     "density_contour_lw = 1"
@@ -1663,8 +1712,8 @@
     "# plot density contours\n",
     "\n",
     "extra_level_factor = 5\n",
-    "# delete_lowest_level = 0\n",
-    "delete_lowest_level = None\n",
+    "delete_lowest_level = 20\n",
+    "# delete_lowest_level = None\n",
     "\n",
     "if True: # fig, define contours\n",
     "    figsize = (fig_aspect_ratio*fig_size,fig_size)\n",
@@ -1682,7 +1731,7 @@
     "#     density_filled_levels = None\n",
     "    density_filled_levels = np.array([10**i for i in np.arange(int(np.log10(vmin)),int(np.log10(vmax))+0.25*extra_level_factor,0.25)])\n",
     "    density_filled_levels = density_filled_levels[density_filled_levels > np.nanmin(count_list)]\n",
-    "    if delete_lowest_level is not None: density_filled_levels = np.delete(density_filled_levels, delete_lowest_level)\n",
+    "    if delete_lowest_level is not None: density_filled_levels = density_filled_levels[delete_lowest_level:]\n",
     "\n",
     "    if True: # cbar extends\n",
     "        top_extend = np.nanmax(count_list) > max(density_filled_levels)\n",
@@ -1844,11 +1893,16 @@
     "if manual_contour_bool:\n",
     "    if x_variable+y_variable == \"xy\":\n",
     "        if _xy_max == 3.5:\n",
-    "            density_contour_levels = [ 3000, 6000, 9500, 19000, 83000 ]\n",
+    "            if extra_variable == \"z\":\n",
+    "                density_contour_levels = [ 3000, 6000, 9500, 19000, 83000 ]\n",
+    "            else:\n",
+    "                density_contour_levels = [ 3000, 5000, 10000 ]\n",
     "        elif _xy_max == 3:\n",
     "            density_contour_levels = [ 5800, 9400, 19000, 82000 ]\n",
     "        elif _xy_max == 2:\n",
     "            density_contour_levels = [ 5600, 9100, 19000, 82000 ]\n",
+    "        elif _xy_max == 9:\n",
+    "            density_contour_levels = [ 500, 1000, 3000, 8000,15000]\n",
     "            \n",
     "#         density_contour_levels = [ 3500, 8700, 14000, 82000 ]\n",
     "#         density_contour_levels = [ 700,1000,3500, 5000 ]\n",
@@ -1863,7 +1917,8 @@
     "        \n",
     "else: # percentages\n",
     "    lower, middle, higher = 40, 65, 82\n",
-    "    fourth = 95 #None\n",
+    "#     fourth = 95\n",
+    "    fourth = None\n",
     "\n",
     "if True: # plot\n",
     "    \n",
@@ -2587,11 +2642,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aspect_equal = True\n",
-    "# aspect_equal = False\n",
+    "# aspect_equal = True\n",
+    "aspect_equal = False\n",
     "\n",
-    "# save_bool = True\n",
-    "save_bool = False"
+    "save_bool = True\n",
+    "# save_bool = False"
    ]
   },
   {
