observ maps update imports

--- a/notebooks/Observational_maps.ipynb
+++ b/notebooks/Observational_maps.ipynb
@@ -13,7 +13,7 @@
     "%autoreload 2\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../src/')"
+    "sys.path.append('../')"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "import matplotlib.cm as cm\n",
     "from matplotlib import colormaps as mplcmaps\n",
     "\n",
-    "from matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
+    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
     "set_matplotlib_params()"
    ]
   },
@@ -61,15 +61,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import compute_variables as CV\n",
-    "import compute_errors as CE\n",
-    "import miscellaneous_functions as MF\n",
-    "import mixed_plots as MP\n",
-    "import plotting_helpers as PH\n",
-    "import load_data\n",
-    "import map_functions as mapf\n",
+    "import src.compute_variables as CV\n",
+    "import src.bootstrap_errors as bootstrap\n",
+    "import src.montecarlo_errors as monte_carlo\n",
+    "from src.errorconfig import MonteCarloConfig,BootstrapConfig\n",
     "\n",
-    "import dynamical_binning as dyn"
+    "import utils.miscellaneous_functions as MF\n",
+    "import utils.load_data as load_data\n",
+    "\n",
+    "import plotting.mixed_plots as MP\n",
+    "import plotting.plotting_helpers as PH\n",
+    "import plotting.map_functions as mapf\n",
+    "\n",
+    "import plotting.dynamical_binning as dyn"
    ]
   },
   {
@@ -241,8 +245,8 @@
     "        ax.legend()\n",
     "        ax.set_aspect(\"equal\")\n",
     "        \n",
-    "    axs[0].set(xlim=(-xymax,xymax), ylim = (-xymax,xymax))\n",
-    "    axs[1].set(xlim=(-xymax,xymax), ylim=(0,zmax))\n",
+    "    axs[0].set(xlim=(-xymax,data[\"x\"].max()), ylim = (-xymax,xymax))\n",
+    "    axs[1].set(xlim=(-xymax,data[\"x\"].max()), ylim=(0,zmax))\n",
     "    \n",
     "    if True: # filename and saving\n",
     "        if R_shift is not None:\n",
@@ -468,10 +472,7 @@
     "                                                         vel_x_variable=vel_x_variable,\n",
     "                                                         vel_y_variable=vel_y_variable)\n",
     "\n",
-    "kinematic_units_dict = mapf.get_kinematic_units_dict(position_variables=x_variable+y_variable,\n",
-    "                                                     vel_x_variable=vel_x_variable,\n",
-    "                                                     vel_y_variable=vel_y_variable,\n",
-    "                                                     degree_symbol=degree_symbol)"
+    "kinematic_units_dict = mapf.get_kinematic_units_dict(degree_symbol=degree_symbol)"
    ]
   },
   {
@@ -1510,7 +1511,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"font.size\"] = 15"
+    "plt.rcParams[\"font.size\"] = 20"
    ]
   },
   {
@@ -1545,8 +1546,8 @@
     "# aspect_equal = True\n",
     "aspect_equal = False\n",
     "\n",
-    "# save_bool = True\n",
-    "save_bool = False"
+    "save_bool = True\n",
+    "# save_bool = False"
    ]
   },
   {
