clarify inside/outside

--- a/notebooks/Visualisation.ipynb
+++ b/notebooks/Visualisation.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# !jt -t onedork -T\n",
-    "!jt -r"
+    "# !jt -r"
    ]
   },
   {
@@ -3019,8 +3019,8 @@
    "source": [
     "frame_delay = 1500 # ms\n",
     "\n",
-    "which = \"within_cuts\"\n",
-    "# which = \"outside_cuts\"\n",
+    "which = \"within_cuts\" # stars that were inside and end inside\n",
+    "# which = \"outside_cuts\" # stars that were inside and end outside\n",
     "\n",
     "min_err = 0.025 if which == \"outside_cuts\" else 0\n",
     "max_err = 0.35\n",
@@ -3232,8 +3232,8 @@
     "legend=False\n",
     "hist_range = [ymin, ymax]\n",
     "bins = 200\n",
-    "# log=True\n",
-    "log=False\n",
+    "log=True\n",
+    "# log=False\n",
     "\n",
     "cmap = mplcmaps[\"jet\"]\n",
     "\n",
@@ -3357,9 +3357,7 @@
     "    if save_bool:\n",
     "        print(\"Saving in\", save_path)\n",
     "        \n",
-    "        for fileformat in (\".png\", \".pdf\"):\n",
-    "            print(fileformat)\n",
-    "            plt.savefig(save_path+filename+fileformat, dpi=300, bbox_inches=\"tight\")"
+    "        plt.savefig(save_path+filename+\".png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
