--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -410,7 +410,8 @@
     "    \"d\" : 5,\n",
     "    \"y\" : -_xy_max,\n",
     "    \"x\" : -_xy_max,\n",
-    "    \"z\" : 0.5,\n",
+    "#     \"z\" : 0.5,\n",
+    "    \"z\" : 0.4,\n",
     "    \"R\" : 0,\n",
     "}\n",
     "extra_variable_max_dict = {\n",
@@ -418,13 +419,14 @@
     "    \"d\" : 11,\n",
     "    \"y\" : _xy_max,\n",
     "    \"x\" : _xy_max,\n",
-    "    \"z\" : _z_max,\n",
+    "#     \"z\" : _z_max,\n",
+    "    \"z\" : 0.8,\n",
     "    \"R\" : 3.5\n",
     "}\n",
     "extra_variable_map = {\n",
     "    \"lb\" : \"R\",#\"d\",\n",
     "    \"dl\" : \"b\",#z\n",
-    "    \"xy\" : \"b\",#z\n",
+    "    \"xy\" : \"z\",\n",
     "    \"Rphi\" : \"z\",\n",
     "    \"yz\": \"x\",\n",
     "    \"xz\": \"y\"\n",
@@ -692,9 +694,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "extra_path_portions = []\n",
+    "\n",
+    "df_extra = df_extra.query(\"vl > 0\")\n",
     "extra_path_portions = [\"only_positive_vl\"]\n",
     "\n",
-    "# extra_path_portions = []"
+    "# df_extra = df_extra.query(\"vl < 0\")\n",
+    "# extra_path_portions = [\"only_negative_vl\"]"
    ]
   },
   {
@@ -756,15 +762,6 @@
     "    save_path_gridcounts = save_path\n",
     "\n",
     "print(\"Saving in\",save_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_extra = df_extra.query(\"vl > 0\")"
    ]
   },
   {
@@ -1169,6 +1166,7 @@
     "    sun_coords = [-R0,0]\n",
     "    angle_range = [-15,-10,-5,0,5,10,15] if x_max > 2 else [-10,-5,0,5,10]\n",
     "    radii_list = np.array([5.1,6.1,7.1,8.1,9.1,10.1,11.1]) if x_max > 2 else [6,7,8,9,10]\n",
+    "    horizontal_list = []\n",
     "    \n",
     "    angle_label_vals = angle_range\n",
     "    \n",
@@ -1193,8 +1191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angle_range = [-2,2]\n",
+    "angle_range = []\n",
     "radii_list = [8.1]\n",
+    "horizontal_list = [-0.3,0.3]\n",
     "\n",
     "angle_label_vals, radii_label_vals = [],[]\n",
     "\n",
@@ -1712,7 +1711,7 @@
     "# plot density contours\n",
     "\n",
     "extra_level_factor = 5\n",
-    "delete_lowest_level = 20\n",
+    "delete_lowest_level = 8\n",
     "# delete_lowest_level = None\n",
     "\n",
     "if True: # fig, define contours\n",
@@ -1817,6 +1816,9 @@
     "                d_color = 'k' if index in indices_white_background else 'white'\n",
     "\n",
     "                axs[index].text(x=x_intersect-abs(sun_coords[0])-0.24,y=low_y,s=fr\"${radius}$ kpc\",color=d_color,rotation=rot,size=line_label_fontsize,bbox=bbox)\n",
+    "        \n",
+    "        for horizontal in horizontal_list:\n",
+    "            axs[index].axhline(horizontal,color='w',linestyle='--',linewidth=contour_lw,dashes=dashes)\n",
     "\n",
     "    if title_bool:\n",
     "        axs[index].set_title(titles[index])\n",
@@ -2769,7 +2771,10 @@
     "                        radii_label_x = x_intersect-abs(sun_coords[0])+radii_label_xshift_dict[x_max]\n",
     "                        \n",
     "                        ax.text(x=radii_label_x,y=low_y,s=fr\"${radius}$ kpc\",color=line_label_colour,rotation=rot,size=line_label_fontsize)\n",
-    "            \n",
+    "                \n",
+    "                for horizontal in horizontal_list:\n",
+    "                    ax.axhline(horizontal,color='w',linestyle='--',linewidth=contour_lw,dashes=dashes)\n",
+    "                \n",
     "            if True: # ticks, lims\n",
     "                ax.xaxis.set_minor_locator(ticker.MultipleLocator(x_minor_locator))\n",
     "                ax.yaxis.set_minor_locator(ticker.MultipleLocator(y_minor_locator))\n",
